--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
 nav {
     text-align: center;
 }
-.home{ 
+.project{ 
     background-color:none;
     font-size: 2em;
 }
@@ -48,6 +48,10 @@ h5{
 }
 section{
     color: white;
+    text-align: center;
+}
+body section {
+    text-align: center;
 }
 a:hover{
     color: blue;
